<resources>
    <string name="app_name">FinanceApp</string>

    <string-array name="item">
        <item>Settings</item>
        <item>Add new date</item>
        <item>Search by date</item>
        <item>Search by category</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Change name maybe?</string>
    <string name="search">Scanning item!</string>
    <string name="home">Welcome!</string>
    <string name="prompt">Choose a category</string>
    <string name="total">Total:</string>
    <string name="spent">Spent:</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="finance">Keep your finances in check</string>
    <string name="description">Enter Description</string>
    <string-array name="category">
        <item>Food</item>
        <item>Leisure</item>
        <item>Travel</item>
        <item>Accommodation</item>
        <item>Other</item>
    </string-array>
    <string-array name="income">
        <item>Salary</item>
        <item>Refund</item>
        <item>Grant</item>
        <item>Other</item>
    </string-array>
</resources>
