<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:background="@drawable/screen"
android:clipToPadding="false"
android:orientation="vertical"
android:id="@+id/loginFragment"
android:layout_height="match_parent">


    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:fontFamily="cursive"
        android:text="@string/finance"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        app:srcCompat="@drawable/icon_xxxhdpi" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:hint="Email"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etEmailReg"
            android:text="hadideknache@gmail.com"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/mail"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="27dp"
            android:imeOptions="actionNext"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:hint="Password"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etPassReg"
            android:text="mypassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="33dp"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbtn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:elevation="7dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/btnSignUp"
        style="@android:style/Widget.Material.Light.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/roundedbtn"
        android:elevation="7dp"
        android:text="@string/no_account" />
</LinearLayout>



